--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "mirage-tcpip"]
 	path = mirage-tcpip
 	url = https://github.com/TheLortex/mirage-tcpip
+[submodule "error"]
+	path = error
+	url = https://github.com/TheLortex/error
