fix dependencies and build

--- a/deps.opam
+++ b/deps.opam
@@ -14,9 +14,13 @@ depends: [
   "tcpip"
   "eio"
   "eio_linux"
+  "mirage-net-unix"
+  "mirage-random-stdlib"
+  "mirage-clock-unix"
 ]
 pin-depends: [
   ["eio.dev" "git+https://github.com/ocaml-multicore/eio.git"]
   ["eio_linux.dev" "git+https://github.com/ocaml-multicore/eio.git"]
+  ["uring.dev" "git+https://github.com/ocaml-multicore/ocaml-uring.git"]
 ]
 synopsis: "Networking experiments"
