--- a/deps.opam
+++ b/deps.opam
@@ -20,5 +20,8 @@ depends: [
   "ipaddr-cstruct"
   "mirage-random-test"
   "mtime"
+  "faraday"
+  "mirage-unix"
+  "mirage-entropy" {>= "0.5.0"}
 ]
 synopsis: "Networking experiments"
